@@ -41,6 +41,8 @@ Bug Fixes
 - Yanking the last line and then putting it elsewhere sometimes resulted in the
   old and new line not having a newline between them.
 - Repeating of o and O commands, including with count, works properly now.
+- dw, dW, and d[w now act like d$ if deleting the last word of a line.
+- cW now properly behaves like cE.
 
 0.6.4 to 0.6.5
 
